# kasane

./: .gitignore  Cargo.toml  README.md
examples/: fetch_tet.rs  post_tet.rs
src/: lib.rs
src/types/: mod.rs  tet.rs  tetification.rs  user.rs
test/: feed.json  notif.json  tet.json  thread.json
