[package]
name = "kasane"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log", "async-await"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
test-log = { version = "0.2.16", features = ["trace"] }
